<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/onboarding"
        tools:context=".ui.main.view.fragment.login.LoginFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_56dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_logo" />

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    style="@style/TextView16"
                    android:layout_marginHorizontal="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_40dp"
                    android:text="@string/user_name_email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_new_password" />

                <plm.patientslikeme2.utils.usercontrol.UserEditText
                    android:id="@+id/et_email"
                    style="@style/EditText"
                    android:layout_height="@dimen/_42dp"
                    android:layout_marginHorizontal="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:imeOptions="actionNext" />

                <LinearLayout
                    android:id="@+id/ll_error_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_28dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_error_24" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        android:id="@+id/tv_email_error"
                        style="@style/TextView14"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="@dimen/_2dp"
                        android:gravity="center|start"
                        android:paddingTop="@dimen/_2dp"
                        android:text="@string/error_please_enter_your_email_username"
                        android:textColor="@color/red_error" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="horizontal">

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView16"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/tv_forget_password"
                        android:text="@string/password" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        android:id="@+id/tv_forget_password"
                        style="@style/TextView13"
                        android:layout_width="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:paddingTop="@dimen/_4dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/blue_darker" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:orientation="vertical">

                    <plm.patientslikeme2.utils.usercontrol.UserEditText
                        android:id="@+id/et_password"
                        style="@style/EditText"
                        android:layout_height="@dimen/_42dp"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="@dimen/_20dp"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                    <ImageView
                        android:id="@+id/iv_visible_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@null"
                        android:paddingStart="@dimen/_0dp"
                        android:paddingEnd="@dimen/_28dp"
                        android:src="@drawable/ic_visibility" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_error_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_28dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_error_24" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        android:id="@+id/tv_password_error"
                        style="@style/TextView14"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="@dimen/_2dp"
                        android:gravity="center|start"
                        android:paddingTop="@dimen/_2dp"
                        android:text="@string/error_please_enter_your_password"
                        android:textColor="@color/red_error" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_28dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_error_24" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        android:id="@+id/tv_common_error"
                        style="@style/TextView14"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="@dimen/_2dp"
                        android:gravity="center|start"
                        android:paddingTop="@dimen/_2dp"
                        android:text="@string/invalid_password"
                        android:textColor="@color/red_error" />
                </LinearLayout>

                <plm.patientslikeme2.utils.usercontrol.UserCheckBox
                    android:id="@+id/cb_remember_me"
                    style="@style/Checkbox"
                    android:layout_marginHorizontal="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:paddingHorizontal="@dimen/_10dp"
                    android:paddingTop="@dimen/_4dp"
                    android:text="@string/remember_me" />

                <plm.patientslikeme2.utils.usercontrol.UserButton
                    android:id="@+id/btn_sign_in"
                    style="@style/ButtonDarkGreen"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/sign_in" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <plm.patientslikeme2.utils.usercontrol.UserTextView
            android:id="@+id/tv_create_account"
            style="@style/TextView16"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_30dp"
            android:text="@string/create_an_account"
            android:textColor="@color/blue_darker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>