<resources>
    <string name="app_name">PatientsLikeMe</string>

    <!--Menu-->
    <string name="title_home">Home</string>
    <string name="title_community">Community</string>
    <string name="title_my_health">My Health</string>
    <string name="title_learning">Learning</string>
...
    <string name="nav_menu_my_account">Manage my account</string>
    <string name="nav_menu_help_center">Help center</string>
    <string name="nav_menu_privacy_policy">Privacy policy</string>
    <string name="nav_menu_terms_conditions">Terms &amp; conditions</string>
    <string name="nav_menu_logout">Log out</string>

    <string name="user_name_email">Username or email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="email_details">Your email address will not be shared with anyone</string>
    <string name="username">Username</string>
    <string name="username_details">This is visible to other PatientsLikeMe members. You may want to use an anonymous name.</string>
    <string name="incorrect_username_password">Incorrect username or password</string>
    <string name="date_of_birth">Date of Birth</string>
...
    <string name="profile_headline">Profile headline</string>
    <string name="hint_profile_headline">Add a brief bio to introduce yourself to the community.</string>
    <string name="zero_sixty_characters">0/160 characters</string>
    <string name="profile_photo">Profile photo</string>
    <string name="profile_theme_color">Profile theme color</string>
    <string name="change_photo">Change photo</string>
    <string name="create_an_account">Create an account</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_details">Please enter the email address you used when you joined. We’ll send you instructions to reset your password.</string>
    <string name="already_member_sign">Already a member? Sign in</string>
    <string name="already_member">Already a member?</string>
    <string name="fail_to_delete_condition">Failed to delete condition</string>

...
